--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,19 +1,31 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="https://github.com/cadugrillo/golang-angular-App1">My First Golang-Angular Project</a>
-      <button class="btn btn-light btn-margin" routerLink="/home" routerLinkActive="active" *ngIf="isAuthenticated"> Home </button>
-      <button class="btn btn-light btn-margin" routerLink="/signIn" routerLinkActive="active" *ngIf="!isAuthenticated"> Sign in </button>
-      <button class="btn btn-light btn-margin" routerLink="/signUp" routerLinkActive="active" *ngIf="!isAuthenticated"> Sign up </button>
-      <button class="btn btn-light btn-margin" routerLink="/profile" routerLinkActive="active" *ngIf="isAuthenticated"> Profile </button>
-      <button class="btn btn-light btn-margin" routerLink="" (click)="signOut()" *ngIf="isAuthenticated"> Sign out </button>
+    <a class="navbar-brand" href="https://github.com/cadugrillo/golang-angular-App1">Golang-Angular App1</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div id="navbarContent" class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home" routerLinkActive="active" *ngIf="isAuthenticated">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/signIn" routerLinkActive="active" *ngIf="!isAuthenticated">Sign in</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/signUp" routerLinkActive="active" *ngIf="!isAuthenticated">Sign up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/profile" routerLinkActive="active" *ngIf="isAuthenticated">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="" (click)="signOut()" *ngIf="isAuthenticated">Sign out</a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
-<div class="container-fluid">
-<div class="row">
-  <div class="col-sm">
-    <router-outlet></router-outlet>
-  </div>
-</div>
-</div>
+
+<router-outlet></router-outlet>
