--- a/ui/src/app/sign-in/sign-in.component.html
+++ b/ui/src/app/sign-in/sign-in.component.html
@@ -12,10 +12,7 @@
           <div class="col mb-2">
             <label for="password" class="form-label">Password:</label>
             <div class="input-group input-group-sm">
-              <input [type]="user.showPassword ? 'text' : 'password'" id="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control form-control-sm">
-              <button type="button" class="btn btn-outline-secondary" (click)="user.showPassword = !user.showPassword">
-                <i class="bi" [ngClass]="{'bi-eye-fill': !user.showPassword, 'bi-eye-slash-fill': user.showPassword}"></i>
-              </button>
+              <input [type]="user.showPassword ? 'text' : 'password'" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,12}$" id="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control form-control-sm">
             </div>
           </div>
         </div>
@@ -26,6 +23,13 @@
               Sign in
             </button>
           </div>
+        </div>
+        <div id="message">
+          <h6>Password must contain the following:</h6>
+          <p id="letter" class="valid">A <b>lowercase</b> letter</p>
+          <p id="capital" class="valid">A <b>capital (uppercase)</b> letter</p>
+          <p id="number" class="valid">A <b>number</b></p>
+          <p id="length" class="valid">Minimum <b>8 characters</b></p>
         </div>
       </div>
     </div>
