--- a/ui/src/app/sign-up/sign-up.component.html
+++ b/ui/src/app/sign-up/sign-up.component.html
@@ -35,7 +35,7 @@
       <div class="card-body" *ngIf="isConfirm">
         <div class="row">
           <div class="col mb-2">
-            <label for="code" class="form-label">Code:</label>
+            <label for="code" class="form-label">We sent you an email with a verification code:</label>
             <input type="text" id="code" name="code" #code="ngModel" [(ngModel)]="user.code" class="form-control form-control-sm">
           </div>
         </div>
