--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,31 +1,10 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="https://github.com/cadugrillo/golang-angular-App1">Golang-Angular App1</a>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div id="navbarContent" class="collapse navbar-collapse">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home" routerLinkActive="active" *ngIf="isAuthenticated">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/signIn" routerLinkActive="active" *ngIf="!isAuthenticated">Sign in</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/signUp" routerLinkActive="active" *ngIf="!isAuthenticated">Sign up</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/profile" routerLinkActive="active" *ngIf="isAuthenticated">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="" (click)="signOut()" *ngIf="isAuthenticated">Sign out</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
+<mat-toolbar class="app-toolbar" color="primary">
+  <span style="cursor:pointer" (click)="openWebPage()">Golang-Angular App1</span>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="example-icon" *ngIf="isAuthenticated" routerLink="home">Home</button>
+  <button mat-icon-button class="example-icon" *ngIf="!isAuthenticated" routerLink="signIn">Sign in</button>
+  <button mat-icon-button class="example-icon" *ngIf="!isAuthenticated" routerLink="signUp">Sign up</button>
+  <button mat-icon-button class="example-icon" *ngIf="isAuthenticated" routerLink="profile">Profile</button>
+  <button mat-icon-button class="example-icon" (click)="signOut()" *ngIf="isAuthenticated" routerLink="">Sign out</button>
+</mat-toolbar>
 <router-outlet></router-outlet>
