--- a/ui/src/app/todo/todo.component.html
+++ b/ui/src/app/todo/todo.component.html
@@ -8,6 +8,30 @@
 <h2></h2>
 <h2></h2>
 <h3>Open Items</h3>
+<table mat-table [dataSource]="activeTodos" class="mat-elevation-z8" *ngIf="activeTodos">
+    
+  <!-- Name ID -->
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> ID </th>
+    <td mat-cell *matCellDef="let todo"> {{todo.id}} </td>
+  </ng-container>
+
+  <!-- Description Column -->
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef> Description </th>
+    <td mat-cell *matCellDef="let todo"> {{todo.message}} </td>
+  </ng-container>
+
+  <!-- Actions Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Actions </th>
+    <td mat-cell *matCellDef="let todo">  </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
 <table class="table">
   <thead>
   <tr>
