--- a/ui/src/app/todo/todo.component.html
+++ b/ui/src/app/todo/todo.component.html
@@ -11,21 +11,35 @@
 <table mat-table [dataSource]="activeTodos" class="mat-elevation-z8" *ngIf="activeTodos">
     
   <!-- Name ID -->
-  <ng-container matColumnDef="id">
+  <!-- <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> ID </th>
     <td mat-cell *matCellDef="let todo"> {{todo.id}} </td>
-  </ng-container>
+  </ng-container> -->
 
   <!-- Description Column -->
   <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef> Description </th>
+    <th mat-header-cell *matHeaderCellDef> DESCRIPTION </th>
     <td mat-cell *matCellDef="let todo"> {{todo.message}} </td>
   </ng-container>
 
   <!-- Actions Column -->
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
-    <td mat-cell *matCellDef="let todo">  </td>
+    <td mat-cell *matCellDef="let todo">  
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon></mat-icon>
+          <span>Done</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon></mat-icon>
+          <span>Delete</span>
+        </button>
+      </mat-menu>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
