--- a/ui/src/app/sign-in/sign-in.component.html
+++ b/ui/src/app/sign-in/sign-in.component.html
@@ -1,3 +1,7 @@
+<p>ExtraLine</p>
+<p>ExtraLine</p>
+<p>ExtraLine</p>
+<p>ExtraLine</p>
 <div class="row justify-content-center my-5">
   <h3 class="row justify-content-center my-5">To-do List - Sign in</h3>
   <div class="col-4">
