--- a/ui/src/app/todo/todo.component.css
+++ b/ui/src/app/todo/todo.component.css
@@ -1,34 +1,28 @@
+.app-toolbar {
+  position: fixed;
+  z-index: 1000;
+  margin-top: 64px;
+  
+}
+
 button {
     width: auto;
     margin: 5px;
+    margin-left: 10px;
   }
   
-  td,th,tr {
-    vertical-align: unset;
-    padding: 15px;
-    text-align: left;
-    height: 40px;
-    border-bottom: 1px solid #ddd;
-
-  }
-
-h1 {
-  text-align:center;
-  display: block;
-  font-size: 2em;
-  margin-top: 0.67em;
-  margin-bottom: 0.67em;
-  margin-left: 0;
-  margin-right: 0;
-  font-weight: bold;
+h2 {
+  margin-left: 30px;
 }
 
 .input {
   margin: auto;
   width: 50%;
   padding: 5px;
-
+  margin-top: 148px;
+  margin-bottom: 30px;
 }
+
 .flex-container {
   display: flex;
   flex-direction: column;
@@ -37,4 +31,12 @@ h1 {
 
 table {
   width: 80%;
+  margin-left: 30px;
+  margin-bottom: 50px;
+  align-self: center;
 }
+
+.example-full-width {
+  width: 500px;
+}
+
