--- a/ui/src/app/todo/todo.component.html
+++ b/ui/src/app/todo/todo.component.html
@@ -1,20 +1,18 @@
+<mat-toolbar class="app-toolbar">
+  <span>To-do List App</span>
+</mat-toolbar>
 <div class="flex-container">
-  <h1>Todo List</h1>
   <div class="input">
-    <input placeholder="description..." [(ngModel)]="todoMessage">
-    <button class="btn btn-primary" (click)="addTodo()">Add New Item</button>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>New Item</mat-label>
+      <input matInput placeholder="Ex. Take my dog for a walk" [(ngModel)]="todoMessage">
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="addTodo()">Add New Item</button>
   </div>
 </div>
-<h2></h2>
-<h2></h2>
-<h3>Open Items</h3>
+<div class="flex-container">
+<h2>Open Items:</h2>
 <table mat-table [dataSource]="activeTodos" class="mat-elevation-z8" *ngIf="activeTodos">
-    
-  <!-- Name ID -->
-  <!-- <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> ID </th>
-    <td mat-cell *matCellDef="let todo"> {{todo.id}} </td>
-  </ng-container> -->
 
   <!-- Description Column -->
   <ng-container matColumnDef="description">
@@ -24,18 +22,18 @@
 
   <!-- Actions Column -->
   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef> Actions </th>
-    <td mat-cell *matCellDef="let todo">  
+    <th style="text-align:right" mat-header-cell *matHeaderCellDef> ACTIONS </th>
+    <td style="text-align:right" mat-cell *matCellDef="let todo">  
       <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>more_vert</mat-icon>
       </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item>
-          <mat-icon></mat-icon>
+      <mat-menu class="action-menu" #menu="matMenu">
+        <button mat-menu-item (click)="completeTodo(todo)">
+          <mat-icon>done</mat-icon>
           <span>Done</span>
         </button>
-        <button mat-menu-item>
-          <mat-icon></mat-icon>
+        <button mat-menu-item (click)="deleteTodo(todo)">
+          <mat-icon>clear</mat-icon>
           <span>Delete</span>
         </button>
       </mat-menu>
@@ -46,56 +44,33 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 </table>
-<table class="table">
-  <thead>
-  <tr>
-    <th>ID</th>
-    <th>Description</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let todo of activeTodos">
-    <td>{{todo.id}}</td>
-    <td>{{todo.message}}</td>
-    <td>
-      <button *ngIf="!todo.complete" class="btn btn-secondary" (click)="completeTodo(todo)">
-        <i class="fa fa-check"></i>
+<h2>Finished Items:</h2>
+<table mat-table [dataSource]="completedTodos" class="mat-elevation-z8" *ngIf="completedTodos">
+
+  <!-- Description Column -->
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef> DESCRIPTION </th>
+    <td mat-cell *matCellDef="let todo"> {{todo.message}} </td>
+  </ng-container>
+
+  <!-- Actions Column -->
+  <ng-container matColumnDef="actions">
+    <th style="text-align:right" mat-header-cell *matHeaderCellDef> ACTIONS </th>
+    <td style="text-align:right" mat-cell *matCellDef="let todo">  
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
       </button>
-      <button *ngIf="todo.complete" class="btn btn-success" disabled>
-        <i class="fa fa-check"></i>
-      </button>
-      <button class="btn btn-danger" (click)="deleteTodo(todo)">
-        <i class="fa fa-trash"></i>
-      </button>
+      <mat-menu class="action-menu" #menu="matMenu">
+        <button mat-menu-item (click)="deleteTodo(todo)">
+          <mat-icon>clear</mat-icon>
+          <span>Delete</span>
+        </button>
+      </mat-menu>
     </td>
-  </tr>
-  </tbody>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
 </table>
-<h3>Finished Items</h3>
-<table class="table">
-  <thead>
-  <tr>
-    <th>ID</th>
-    <th>Description</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let todo of completedTodos">
-    <td>{{todo.id}}</td>
-    <td>{{todo.message}}</td>
-    <td>
-      <button *ngIf="!todo.complete" class="btn btn-secondary" (click)="completeTodo(todo)">
-        <i class="fa fa-check"></i>
-      </button>
-      <button *ngIf="todo.complete" class="btn btn-success" disabled>
-        <i class="fa fa-check"></i>
-      </button>
-      <button class="btn btn-danger" (click)="deleteTodo(todo)">
-        <i class="fa fa-trash"></i>
-      </button>
-    </td>
-  </tr>
-  </tbody>
-</table>
+</div>
