--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="app-toolbar" color="primary">
-  <span style="cursor:pointer" (click)="openWebPage()">Golang-Angular App1</span>
+  <span style="cursor:pointer" (click)="openWebPage()">GOLANG-ANGULAR APP1</span>
   <span class="example-spacer"></span>
   <button mat-icon-button class="example-icon" *ngIf="isAuthenticated" routerLink="home">Home</button>
   <button mat-icon-button class="example-icon" *ngIf="!isAuthenticated" routerLink="signIn">Sign in</button>
