--- a/ui/src/app/todo/todo.component.html
+++ b/ui/src/app/todo/todo.component.html
@@ -16,8 +16,8 @@
 
   <!-- Description Column -->
   <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef> DESCRIPTION </th>
-    <td mat-cell *matCellDef="let todo"> {{todo.message}} </td>
+    <th style="text-align:left" mat-header-cell *matHeaderCellDef> DESCRIPTION </th>
+    <td style="text-align:left" mat-cell *matCellDef="let todo"> {{todo.message}} </td>
   </ng-container>
 
   <!-- Actions Column -->
@@ -49,8 +49,8 @@
 
   <!-- Description Column -->
   <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef> DESCRIPTION </th>
-    <td mat-cell *matCellDef="let todo"> {{todo.message}} </td>
+    <th style="text-align:left" mat-header-cell *matHeaderCellDef> DESCRIPTION </th>
+    <td style="text-align:left" mat-cell *matCellDef="let todo"> {{todo.message}} </td>
   </ng-container>
 
   <!-- Actions Column -->
