--- a/ui/src/app/sign-in/sign-in.component.css
+++ b/ui/src/app/sign-in/sign-in.component.css
@@ -5,24 +5,23 @@
 }
 
 .Users {
+  display: flex;
+  flex-direction: column;
   margin-top: 148px;
-  margin-left: 20px;
+  margin-left: 200px;
+  position: absolute;
+
   }
 
   .example-card {
-    max-width: 800px;
-    max-height: 250px;
+    max-width: 665px;
+    max-height: 180px;
     margin-bottom: 50px;
     background-color: rgb(245, 245, 248);
   }
 
   .example-full-width {
     width: 90%;
-  }
-
-  section {
-    display: table;
-    margin-left: 30px;
   }
 
   .example-button-row {
@@ -42,7 +41,10 @@
   .middleline {
     display: table-cell;
     width: 800px;
-    margin: auto;
+  }
+
+  h3 {
+    margin-top: 20px;
   }
 
   .example-margin {
