--- a/ui/src/app/mqtt-client/mqtt-client.component.html
+++ b/ui/src/app/mqtt-client/mqtt-client.component.html
@@ -1,6 +1,19 @@
 <mat-toolbar class="app-toolbar">
-    <span>MQTT Test Client</span>
+    <span>CG-EDGE - IOT Core -  Test Client</span>
   </mat-toolbar>
+  <section>
+    <div class="example-button-row">
+      <mat-form-field class="mat-input" appearance="fill">
+        <mat-label>Topic to Subscribe</mat-label>
+        <input  matInput autocomplete="off" placeholder="mydevice/mytopic" [disabled]="running" [(ngModel)]="topic">
+      </mat-form-field>
+      <button mat-raised-button color="primary" [disabled]="running" (click)="subscribeToTopic(topic)">Start</button>
+      <button mat-raised-button color="primary" [disabled]="!running" (click)="unsubscribeTopic()">Stop</button>
+      <button mat-raised-button color="primary" (click)="clearData()">Clear</button>
+    </div>
+</section>
+<div class="table-wrapper">
+  <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
   <ng-container matColumnDef="Topic">
     <th mat-header-cell *matHeaderCellDef> Topic </th>
@@ -8,7 +21,7 @@
   </ng-container>
   <ng-container matColumnDef="Timestamp">
     <th mat-header-cell *matHeaderCellDef> Timestamp </th>
-    <td mat-cell *matCellDef="let element"> {{getTimestamp()}} </td>
+    <td mat-cell *matCellDef="let element; let i= dataIndex"> {{recTS[i]}} </td>
   </ng-container>
   <ng-container matColumnDef="expand">
     <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
@@ -38,3 +51,9 @@
   </tr>
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
+<mat-paginator [pageSizeOptions]="[10, 50, 100]"
+                    showFirstLastButtons 
+                    aria-label="Select page of messages">
+</mat-paginator>
+</div>
+</div>
