--- a/ui/src/app/todo/todo.component.html
+++ b/ui/src/app/todo/todo.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="app-toolbar">
-  <span>To-do List App</span>
+  <span>To-do List</span>
 </mat-toolbar>
 <div class="flex-container">
   <div class="input">
