--- a/ui/src/app/home/home.component.css
+++ b/ui/src/app/home/home.component.css
@@ -1,17 +1,20 @@
-h1 {
-    text-align:center;
-    display: block;
-    font-size: 2em;
-    margin-top: 0.67em;
-    margin-bottom: 0.67em;
-    margin-left: 0;
-    margin-right: 0;
-    font-weight: bold;
-
+.app-toolbar {
+  position: fixed;
+  z-index: 1000;
+  margin-top: 64px;
 }
 
-.flex-container {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+.apps {
+  margin-top: 148px;
+  margin-left: 20px;
+  display: inline-grid;
+  grid-template-columns: 380px 380px 380px;
+  position: absolute;
+}
+
+.example-card {
+  max-width: 300px;
+  max-height: 300px;
+  margin-bottom: 80px;
+  background-color: rgb(225, 238, 247);
 }
