--- a/ui/src/app/sign-in/sign-in.component.html
+++ b/ui/src/app/sign-in/sign-in.component.html
@@ -20,7 +20,7 @@
           </div>
           <div class="middleline">
             <button mat-raised-button color="primary" (click)="signIn()">Sign in</button>
-            <h3>Don't have an account? Click <span style="cursor: pointer; color:blue;" (click)="goToSignUp()">here.</span></h3>
+            <h3>Don't have an account ? Click <span style="cursor: pointer; color:blue;" (click)="goToSignUp()">here.</span> Forgot your password ? Click <span style="cursor: pointer; color:blue;" (click)="goToforgotPassword()">here.</span></h3>
           </div>
       </mat-card-content>
       <mat-card-actions align="end"></mat-card-actions>
